--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,9 +4,10 @@ compileSdk = "33"
 targetSdk = "33"
 androidGradlePlugin = "8.0.2"
 kotlin = "1.8.10"
+androidxAppCompat = "1.6.1"
 
 [libraries]
-
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "androidxAppCompat" }
 
 # Dependencies of the included build-logic
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "androidGradlePlugin" }
