--- a/build.gradle
+++ b/build.gradle
@@ -4,3 +4,7 @@ plugins {
   alias libs.plugins.android.library apply false
   alias libs.plugins.kotlin.android apply false
 }
+
+allprojects {
+  apply from: "$rootDir/codequality/code-quality.gradle"
+}
