Add timber logging for debug version of an app

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
   }
   buildFeatures {
     compose true
+    buildConfig true
   }
   composeOptions {
       kotlinCompilerExtensionVersion = "1.4.8"
@@ -43,4 +44,5 @@ dependencies {
   implementation libs.androidx.compose.foundation
   implementation libs.androidx.compose.material3
   debugImplementation libs.androidx.compose.ui.tooling
+  implementation libs.timber
 }
