--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,7 @@ android {
 
 dependencies {
   implementation libs.androidx.appcompat
+  implementation libs.splashscreen
   implementation libs.androidx.compose.ui
   implementation libs.androidx.activity.compose
   implementation libs.androidx.compose.foundation
