--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,8 @@ dependencies {
   implementation libs.androidx.compose.foundation
   implementation libs.androidx.compose.material3
   debugImplementation libs.androidx.compose.ui.tooling
+  implementation libs.okhttp.client
+  implementation libs.okhttp.interceptor
   implementation libs.hilt.android
   kapt libs.hilt.compiler
   implementation libs.hilt.navigation.compose
