--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ splash = "1.0.0"
 compose = "1.4.3"
 composeActivity = "1.6.0"
 composeMaterial = "1.1.1"
+arrow = "1.2.0-RC"
 okHttp = "4.11.0"
 hilt = "2.46.1"
 hilt-navigation-compose = "1.0.0"
@@ -25,6 +26,7 @@ androidx-compose-foundation = { group = "androidx.compose.foundation", name = "f
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "composeActivity" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "composeMaterial" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
+arrow-core = { group = "io.arrow-kt", name = "arrow-core", version.ref = "arrow" }
 okhttp-client = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHttp" }
 okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okHttp" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
