--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,6 +47,7 @@ dependencies {
   implementation libs.androidx.compose.foundation
   implementation libs.androidx.compose.material3
   debugImplementation libs.androidx.compose.ui.tooling
+  implementation libs.androidx.navigation.compose
   implementation libs.arrow.core
   implementation libs.okhttp.client
   implementation libs.okhttp.interceptor
