--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ androidxAppCompat = "1.6.1"
 splash = "1.0.0"
 compose = "1.4.3"
 composeActivity = "1.6.0"
+composeNaviagation = "2.5.3"
 composeMaterial = "1.1.1"
 arrow = "1.2.0-RC"
 okHttp = "4.11.0"
@@ -24,6 +25,7 @@ splashscreen = { group = "androidx.core", name = "core-splashscreen", version.re
 androidx-compose-ui = { group = "androidx.compose.ui", name = "ui", version.ref = "compose" }
 androidx-compose-foundation = { group = "androidx.compose.foundation", name = "foundation", version.ref = "compose" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "composeActivity" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "composeNaviagation" }
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "composeMaterial" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 arrow-core = { group = "io.arrow-kt", name = "arrow-core", version.ref = "arrow" }
