--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   alias libs.plugins.android.application
   alias libs.plugins.kotlin.android
+  alias libs.plugins.google.services
   alias libs.plugins.hilt
   alias libs.plugins.kapt
 }
@@ -49,6 +50,7 @@ dependencies {
   debugImplementation libs.androidx.compose.ui.tooling
   implementation libs.androidx.navigation.compose
   implementation libs.arrow.core
+  implementation libs.firebase.auth
   implementation libs.okhttp.client
   implementation libs.okhttp.interceptor
   implementation libs.hilt.android
