--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,6 +11,8 @@ composeActivity = "1.6.0"
 composeNaviagation = "2.5.3"
 composeMaterial = "1.1.1"
 arrow = "1.2.0-RC"
+googleServices = "4.3.15"
+firebase = "22.1.0"
 okHttp = "4.11.0"
 hilt = "2.46.1"
 hilt-navigation-compose = "1.0.0"
@@ -29,6 +31,7 @@ androidx-navigation-compose = { group = "androidx.navigation", name = "navigatio
 androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "composeMaterial" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling", version.ref = "compose" }
 arrow-core = { group = "io.arrow-kt", name = "arrow-core", version.ref = "arrow" }
+firebase-auth = {group = "com.google.firebase", name = "firebase-auth-ktx", version.ref = "firebase"}
 okhttp-client = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHttp" }
 okhttp-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "okHttp" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt" }
@@ -48,3 +51,4 @@ android-library = { id = "com.android.library", version.ref = "androidGradlePlug
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 kapt = { id = "org.jetbrains.kotlin.kapt", version.ref = "kotlin" }
+google-services = { id = "com.google.gms.google-services", version.ref = "googleServices" }
